bug fixed: menu covered by content area and don't let to click on links
Also moved layout__page from most to should deps in p-index block

--- a/src/common.blocks/main-menu/main-menu.css
+++ b/src/common.blocks/main-menu/main-menu.css
@@ -12,6 +12,7 @@
     vertical-align: top;
 
     background: #000;
+    z-index: 1000;
 }
 
 .main-menu__wrapper
